app/assets/stylesheets/header.css.scss
@import "common";

.main-container, #site-links, #together {
  width: 100%;
}

.main-container {
  height: 100%;
}

.fixed-header {
  position: fixed;
  top: 0;
  left: 0;
}

html {
  height: 100%;
}

body {
  position: relative;
  overflow-x: hidden;
  height: 100%;
}

header {
  position: absolute;
  bottom: 0;
  left: 0;
  top: auto;
  width: 100%;
  z-index: 99;
}

#site-header {
  min-height: 110px;
  background: #FFFFFF;
  opacity: 1;
  width: 100%;
  max-height: 110px;
  -moz-box-shadow: 0 0 6px #E0E0E0;
  -webkit-box-shadow: 0 0 6px #E0E0E0;
  box-shadow: 0 0 6px #E0E0E0;
}

#header-content {
  position: relative;
  img {
    margin-top: 25px;
  }
}

#logo a {
  background: url(/assets/logo.png) no-repeat;
  width: 221px;
  height: 60px;
  float: left;
  margin-top: 26px;
  margin-left: 18px;
}

nav .burger {
  display: none;
}

nav {
  overflow: hidden;
  float: right;
  width:100%;
  margin-top:-34px;
}

@media (max-width: $mobile-view-size) {
  nav ul { float:none ; display: none; }
  nav .burger { display: block; }
}

body.mobile-menu {
  margin-left: -200px !important;
  overflow-x:hidden;
  max-width:100%;
}

#map-container.mobile-menu {
  margin-left:-200px;
  right:200px;
}

section.feature.mobile-menu {
  height: 40px;
  overflow:hidden;
  img{
    display:none;
  }
}

nav ul.mobile-menu {
  display: block;
  float: right;
  width:150px;
  height:100%;
  margin-top:100px;
  li {
    float: none;
    display: block;
    width: 100%;
    padding-bottom: 16px;
    margin-left: 20px;
  }
}

.burger {
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  background-color: rgba(0,0,0,0.1);
  padding-top: 12px;
  border-radius: 4px;
  width: 60px;
  height:60px;
  position: absolute;
  right: 18px;
  top: 25px;
  margin-top: 2px;
  cursor: pointer;
  &:hover {
    background-color: rgba(0,0,0,0.25);
  }
  .patty {
    content:'';
    background: image-url("burger.png");
    background-repeat: no-repeat;
    background-size: 100% auto;
    width: 40px;
    height: 35px;
    margin: auto;
  }
}

nav ul {
  float: right;
  margin-top: 0px;
  margin-right: 20px;
}

nav ul li {
  list-style-type: none;
  float: left;
  margin-left: 30px;
}

nav ul li a {
  display: block;
  color: #535353;
  text-transform: uppercase;
  font-family: "Merriweather Sans", Georgia;
  font-size: 14px;
  padding-bottom: 2px;
}

nav ul li a:hover, nav ul li a.active {
  border-bottom: 1px solid #535353;
  color: #535353;
}

.feature {
  background-color: $bright-blue;
  height: 100%;
  h1, h2, h3, h4 {
    color: $white;
  }
  h1 {
    font-size: 90px;
    line-height: 147px;
    margin-top: 0px;
    text-align: center;
  }
  h2 {
    font-size: 22px;
    line-height: 38px;
    text-align: center;
    font-family: "Merriweather Sans", Georgia;
  }

  @media (min-width: $desktop-view-size) {
    #logo {
      margin-left: 0px;
    }
  }

  @media (max-width: $mobile-view-size) {
    h2 {
      text-indent: 100%;
      white-space: nowrap;
      overflow: hidden;
    }
  }
  h3 {
    font-size: 20px;
    line-height: 30px;
  }
  h4 {
    font-size: 14px;
    line-height: 24px;
  }
  #title {
    position: fixed;
    left: 0px;
    right: 0px;
    top: 200px;

    .scroll-arrow {
      position: fixed;
      width: 100%;

      img {
        position: fixed;
        margin-left: -18px;
        left: 50%;
        margin-top: 30px;
      }
    }
  }
  #slogan {
    position: fixed;
    top: 115px;
    right: 98px;
    width: 58%;
    height: 150px;
  }
  .row {
    position: fixed;
    padding-top: 310px;
    padding-bottom: 60px;
    padding-left: 65px;
  }
  .six {
    width: 48.1%;
  }
}

